---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/tid.sql
snapshot_kind: text
---
SELECT
  CAST('(0,0)' AS TID) AS tid00,
  CAST('(0,1)' AS TID) AS tid01,
  CAST('(-1,0)' AS TID) AS tidm10,
  CAST('(4294967295,65535)' AS TID)
  AS tidmax;

SELECT CAST('(4294967296,1)' AS TID);

SELECT CAST('(1,65536)' AS TID);

SELECT pg_input_is_valid('(0)', 'tid');

SELECT * FROM pg_input_error_info('(0)', 'tid');

SELECT pg_input_is_valid('(0,-1)', 'tid');

SELECT * FROM pg_input_error_info('(0,-1)', 'tid');

CREATE TABLE tid_tab (a INT);

INSERT INTO tid_tab VALUES (1), (2);

SELECT MIN(ctid) FROM tid_tab;

SELECT MAX(ctid) FROM tid_tab;

TRUNCATE tid_tab;

CREATE MATERIALIZED VIEW tid_matview AS SELECT a FROM tid_tab;

SELECT currtid2(CAST('tid_matview' AS TEXT), CAST('(0,1)' AS TID));

INSERT INTO tid_tab VALUES (1);

REFRESH MATERIALIZED VIEW tid_matview;

SELECT currtid2(CAST('tid_matview' AS TEXT), CAST('(0,1)' AS TID));

DROP MATERIALIZED VIEW "tid_matview";

TRUNCATE tid_tab;

CREATE SEQUENCE tid_seq;

SELECT currtid2(CAST('tid_seq' AS TEXT), CAST('(0,1)' AS TID));

DROP SEQUENCE "tid_seq";

CREATE INDEX "tid_ind" ON tid_tab USING btree (a);

SELECT currtid2(CAST('tid_ind' AS TEXT), CAST('(0,1)' AS TID));

DROP INDEX "tid_ind";

CREATE TABLE tid_part (a INT)
PARTITION BY RANGE(a);

SELECT currtid2(CAST('tid_part' AS TEXT), CAST('(0,1)' AS TID));

DROP TABLE "tid_part";

CREATE VIEW tid_view_no_ctid
AS SELECT a FROM tid_tab;

SELECT currtid2(CAST('tid_view_no_ctid' AS TEXT), CAST('(0,1)' AS TID));

DROP VIEW "tid_view_no_ctid";

CREATE VIEW tid_view_with_ctid
AS SELECT ctid, a FROM tid_tab;

SELECT currtid2(CAST('tid_view_with_ctid' AS TEXT), CAST('(0,1)' AS TID));

INSERT INTO tid_tab VALUES (1);

SELECT currtid2(CAST('tid_view_with_ctid' AS TEXT), CAST('(0,1)' AS TID));

DROP VIEW "tid_view_with_ctid";

TRUNCATE tid_tab;

CREATE VIEW tid_view_fake_ctid
AS SELECT 1 AS ctid, 2 AS a;

SELECT currtid2(CAST('tid_view_fake_ctid' AS TEXT), CAST('(0,1)' AS TID));

DROP VIEW "tid_view_fake_ctid";

DROP TABLE "tid_tab" CASCADE;
